# DiagramGenerator

./: .gitignore  ApplicationTimeLog.py  config.py  diagram.py  example_bp.py  icons_helper.py  main.py  mongo_analytics.py  mongo_client.py  mongo_server.py  package.iss  pyproject.toml  tasks.py  test_export_json.json  user_network_details.py
react-ui/: package.json
react-ui/public/: index.html
react-ui/src/components/: Home.js
react-ui/src/hooks/: websocket.js
static/js/: 2.9aa39cac.chunk.js  2.9aa39cac.chunk.js.map  main.f1660c29.chunk.js  main.f1660c29.chunk.js.map
templates/: index.html
